# video-app

./: .gitignore  CMakeLists.txt
lib/FFmpeg/: CMakeLists.txt
lib/glfw/: CMakeLists.txt
src/: main.cpp  video_reader.cpp
